# CDIPpy

./: .gitignore  mkdocs.yml  pyproject.toml
cdippy/: __init__.py  cdipnc.py  mopdata.py  nchashes.py  ncstats.py  ndbc.py  plotting.py  spectra.py  stndata.py
cdippy/plots/: __init__.py  compendium.py  sst_climatology.py  utils.py
cdippy/utils/: location.py  urls.py  utils.py
docs/: api.md
docs/examples/: cdippy-boxplot.ipynb  cdippy-compendium.ipynb  cdippy-quality-control.ipynb  cdippy-spectrum2d.ipynb  index.md
tests/: test_cdippy.py
tests/resources/: HASH  HASH.pkl  HASH_new  wmo_ids
tests/resources/predeploy/: 028p0_d24_rt.nc  catalog.xml
