[project]
name = "cdippy"
version = "0.1.0-dev"
description = "CDIP python library"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "BSD License" }
authors = [
  { name = "CDIP", email = "9@cdip.ucsd.edu" }
]
requires-python = ">=3.11"
dependencies = [
  "matplotlib",
  "numpy",
  "netCDF4",
  "pandas",
  "pytz",
]
keywords = ["oceanography", "waves", "buoy", "data"]

[project.urls]
Homepage = "https://cdip.ucsd.edu"
Source = "https://github.com/cdipsw/CDIPpy"

[tool.setuptools.packages.find]
where = ["."]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "black",
    "coverage",
    "flake8",
    "mkdocs",
    "mkdocs-macros-plugin",
    "mkdocstrings[python]",
    "mkdocs-material",
    "mkdocstrings[python]",
    "nbval",
    "pre-commit",
    "pytest",
]
